--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://ginapult:Gms05092008mdb@cluster0-ltf2f.gcp.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://ginapult:kLikitWmT3fTI6dH@cluster0-ltf2f.gcp.mongodb.net/test?retryWrites=true&w=majority
